--- a/gateway-service/src/main/resources/static/index.html
+++ b/gateway-service/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
   <script src="main.js"></script>
 </head>
-<body>
+<body id="index">
 <div
     class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto font-weight-normal">Store</h5>
