--- a/gateway-service/src/main/resources/static/checkout.html
+++ b/gateway-service/src/main/resources/static/checkout.html
@@ -31,29 +31,27 @@
   <form id="order-form">
     <div class="form-group">
       <label for="field-name">Name</label>
-      <input type="text" name="name" class="form-control" id="field-name"
+      <input value="Mike" type="text" name="name" class="form-control" id="field-name"
              aria-describedby="nameHelp" placeholder="Name" required>
       <small id="nameHelp" class="form-text text-muted">Enter your name</small>
     </div>
     <div class="form-group">
       <label for="field-email">Email</label>
-      <input type="email" name="email" class="form-control" id="field-email"
+      <input value="Mike@mail.com" type="email" name="email" required class="form-control" id="field-email"
              aria-describedby="emailHelp"
              placeholder="Email">
       <small id="emailHelp" class="form-text text-muted">Enter your email address</small>
     </div>
     <div class="form-group">
       <label for="field-payment">Payment</label>
-      <select class="form-control" name="Payment" id="field-payment" aria-describedby="paymentHelp"
+      <select class="form-control" name="payment" id="field-payment" aria-describedby="paymentHelp"
               required>
-        <option value="card">Visa / Mastercard</option>
+        <option value="Visa / Mastercard">Visa / Mastercard</option>
         <option value="Bitcoin">Bitcoin</option>
       </select>
       <small id="paymentHelp" class="form-text text-muted">Select payment method</small>
     </div>
-    <button type="submit" onclick="makeOrder(); return false;" class="btn btn-primary">Submit
-      Order
-    </button>
+    <button type="submit" class="btn btn-primary">Submit Order</button>
   </form>
   <br>
   <br>
